--- a/src/simmer/Examples/Shane/Shane_reduction.ipynb
+++ b/src/simmer/Examples/Shane/Shane_reduction.ipynb
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "c.check_logsheet(instrument, date='Jul-23')"
+    "c.check_logsheet(instrument, date=\"Jul-23\")"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ad.add_dark_exp('Jul-23', instrument)"
+    "ad.add_dark_exp(\"Jul-23\", instrument)"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_config.cc(instrument, 'Jul-23')"
+    "create_config.cc(instrument, \"Jul-23\")"
    ]
   },
   {
