--- a/src/simmer/PHARO_reduction.ipynb
+++ b/src/simmer/PHARO_reduction.ipynb
@@ -36,7 +36,8 @@
    ],
    "source": [
     "import os\n",
-    "os.chdir('..')\n",
+    "\n",
+    "os.chdir(\"..\")\n",
     "os.getcwd()"
    ]
   },
@@ -46,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_folder('shane_quickstart')"
+    "download_folder(\"shane_quickstart\")"
    ]
   },
   {
@@ -57,13 +58,13 @@
    "source": [
     "inst = i.ShARCS()\n",
     "\n",
-    "path_to_package = '/Users/arjunsavel/Desktop/SImMER/' # edit this line!\n",
+    "path_to_package = \"/Users/arjunsavel/Desktop/SImMER/\"  # edit this line!\n",
     "\n",
-    "config_file = path_to_package +  'config_shane.csv'\n",
-    "raw_dir = 'shane_quickstart/'\n",
+    "config_file = path_to_package + \"config_shane.csv\"\n",
+    "raw_dir = \"shane_quickstart/\"\n",
     "# raw_dir = path_to_package + src/simmer/tests/ShARCS_integration\n",
     "\n",
-    "reddir = '/Users/arjunsavel/Desktop/test_reduced/' # edit this line!"
+    "reddir = \"/Users/arjunsavel/Desktop/test_reduced/\"  # edit this line!"
    ]
   },
   {
@@ -112,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.check_logsheet(instrument, date='Palomar_logsheets_201604')"
+    "c.check_logsheet(instrument, date=\"Palomar_logsheets_201604\")"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_config.cc(instrument, 'Palomar_logsheets_201604')"
+    "create_config.cc(instrument, \"Palomar_logsheets_201604\")"
    ]
   },
   {
