Ensure relative imports, validate docs

--- a/docs/pages/Shane_reduction.ipynb
+++ b/docs/pages/Shane_reduction.ipynb
@@ -9,30 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
     "\n",
-    "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.abspath(\"\"))))"
+    "import simmer.insts as i\n",
+    "import simmer.drivers as drivers\n",
+    "from simmer.tests.tests_reduction import download_folder"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import insts as i\n",
-    "import drivers\n",
-    "from tests.tests_reduction import download_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -143,10 +133,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running darks: 100%|██████████| 2/2 [00:09<00:00,  4.82s/it]\n",
-      "Running flats: 100%|██████████| 3/3 [00:01<00:00,  1.79it/s]\n",
-      "Running skies: 100%|██████████| 1/1 [00:01<00:00,  1.65s/it]\n",
-      "Running image driver: 100%|██████████| 1/1 [00:04<00:00,  4.29s/it]\n",
+      "Running darks: 100%|██████████| 2/2 [00:12<00:00,  6.47s/it]\n",
+      "Running flats: 100%|██████████| 3/3 [00:01<00:00,  1.56it/s]\n",
+      "Running skies: 100%|██████████| 1/1 [00:02<00:00,  2.53s/it]\n",
+      "Running image driver: 100%|██████████| 1/1 [00:06<00:00,  6.55s/it]\n",
       "Running registration:   0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
@@ -161,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running registration: 100%|██████████| 1/1 [00:43<00:00, 43.85s/it]\n"
+      "Running registration: 100%|██████████| 1/1 [00:51<00:00, 51.45s/it]\n"
      ]
     }
    ],
