Adding notebooks to documentation in full

--- a/docs/pages/Shane_reduction.ipynb
+++ b/docs/pages/Shane_reduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reducing Shane Data"
+    "# ShARCS Reduction Quickstart"
    ]
   },
   {
@@ -18,15 +18,6 @@
     "import simmer.insts as i\n",
     "import simmer.drivers as drivers\n",
     "from simmer.tests.tests_reduction import download_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inst = i.ShARCS()"
    ]
   },
   {
@@ -82,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Creating the config file"
+    "## 3. Creating the config file"
    ]
   },
   {
@@ -112,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Performing the reduction"
+    "## 4. Performing the reduction"
    ]
   },
   {
