--- a/docs/pages/PHARO_reduction.ipynb
+++ b/docs/pages/PHARO_reduction.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reducing Shane Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.abspath(\"\"))))"
+    "# PHARO Reduction Quickstart"
    ]
   },
   {
@@ -25,18 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import insts as i\n",
-    "import drivers\n",
-    "from tests.tests_reduction import download_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inst = i.ShARCS()"
+    "import os\n",
+    "\n",
+    "import simmer.insts as i\n",
+    "import simmer.drivers as drivers\n",
+    "from simmer.tests.tests_reduction import download_folder"
    ]
   },
   {
@@ -49,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_folder(\"shane_quickstart\")"
+    "download_folder(\"PHARO_integration\")"
    ]
   },
   {
@@ -67,18 +48,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly to the PHARO method, we begin by instantiating the code — but this time, with a different instrument and different data. The downloaded files will take up about a gigabyte of space, and they’ll be placed in a folder in your current directory.\n",
+    "We begin by instantiating the code — but this time, with a different instrument and different data. The downloaded files will take up about a gigabyte of space, and they’ll be placed in a folder in your current directory.\n",
     "\n",
     "Many specifics (plate scale, FITS headers) are bound as attributes and methods to their respective instrument class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inst = i.ShARCS()"
+    "inst = i.PHARO()"
    ]
   },
   {
@@ -92,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Creating the config file"
+    "## 3. Creating the config file"
    ]
   },
   {
@@ -104,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_notebook = os.getcwd()\n",
     "\n",
-    "config_file = \"config_shane.csv\"\n",
-    "raw_dir = \"shane_quickstart/\"\n",
+    "config_file = \"test_image_config.csv\"\n",
+    "raw_dir = \"PHARO_integration/\"\n",
     "\n",
     "os.mkdir(\"reduced\")\n",
     "\n",
@@ -122,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Performing the reduction"
+    "## 4. Performing the reduction"
    ]
   },
   {
@@ -134,34 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running darks: 100%|██████████| 2/2 [00:09<00:00,  4.82s/it]\n",
-      "Running flats: 100%|██████████| 3/3 [00:01<00:00,  1.79it/s]\n",
-      "Running skies: 100%|██████████| 1/1 [00:01<00:00,  1.65s/it]\n",
-      "Running image driver: 100%|██████████| 1/1 [00:04<00:00,  4.29s/it]\n",
+      "Running darks: 100%|██████████| 1/1 [00:06<00:00,  6.40s/it]\n",
+      "Running flats: 100%|██████████| 1/1 [00:05<00:00,  5.96s/it]\n",
+      "Running skies: 100%|██████████| 1/1 [00:10<00:00, 10.27s/it]\n",
+      "Running image driver: 100%|██████████| 1/1 [01:31<00:00, 91.79s/it]\n",
       "Running registration:   0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too many images to plot.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running registration: 100%|██████████| 1/1 [00:43<00:00, 43.85s/it]\n"
      ]
     }
    ],
